Fix mobile-responsive spacing error cause by flex-direction column

--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -1,14 +1,5 @@
 @import './constants.scss';
 
-.inner-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-}
-
 .button {
   display: flex;
   justify-content: center;
