--- a/src/assets/styles/resets.scss
+++ b/src/assets/styles/resets.scss
@@ -32,20 +32,28 @@ button:focus {
   outline: none;
 }
 
+h1, p {
+  text-align: center;
+}
+
 h1 { 
   font-size: 36px;
   margin: 10px;
 }
 
-
 .parent, #root, html, body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   width: 100%;
   height: 100%;
   font-family: $primary-font;
   font-size: 24px;
   color: black;
+}
+
+.inner-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 20px 0;
 }
